# pyrrho

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: CODE_MODALITY_AXES.md  FITZ_GOV_SAGE_GENERATION_RUNBOOK.md  FITZ_GOV_SAGE_MANUAL_MESSY_PROCEDURE.md  FITZ_GOV_SAGE_PLAN.md  FITZ_GOV_V2_PRODUCTION_RECIPE_20260622.md  GOAL.md  HANDOFF.md  INDEX.md  LOG.md  METHODOLOGY.md  MODEL_CARD_TEMPLATE.md  MOE_SEED_SEARCH_2026-05-26.md  MOE_UPCYCLING_DECISION_2026-05-26.md  OLMOE_TRAINING_PATH_2026-05-31.md  PROJECT.md  PYRRHO_MOE_ARCHITECTURE.md  PYRRHO_MOE_MVP_RUN_GUIDE.md  ROADMAP.md  SETUP.md  STATE.md  V2_LABEL_INSTABILITY_INVESTIGATION_20260622.md
patches/: llama_cpp_qwen3moe_mlp_only_layers.patch
scripts/: aggregate_multitask_seeds.py  aggregate_slm_seeds.py  analyze_moe_failures.py  analyze_moe_posthoc_quorum_gaps.py  analyze_moe_seed_budget.py  audit_code_modality_axes.py  audit_fitz_gov_sage_label_preservation.py  audit_fitz_gov_sage_outputs.py  audit_fitz_gov_sage_shape.py  audit_moe_runtime_shape.py  automotive_ood_probe.py  aviation_ood_probe.py  benchmark_moe_release.py  build_model_card.py  build_slm_model_card.py  code_ood_probe.py  compare_moe_posthoc_policies.py  compare_runs.py  convert_qwen3moe_hf_to_gguf.py  count_moe_params.py  distill_moe_posthoc_quorum.py  eval.py  eval_moe.py  eval_report.py  eval_slm.py  export_olmoe_structural_checkpoint.py  export_onnx.py  filter_processed_modalities.py  generate_moe_teacher_logits.py  infer_moe_posthoc.py  infer_moe_qwen_sft.py  init_olmoe_from_donor.py  inspect_tier0_failures.py  inspect_tier1_failures.py  materialize_fitz_gov_sage_data.py  (+46 more)
tests/: test_smoke.py  (+14 more)
(+75 files in other folders)
